--- a/package.json
+++ b/package.json
@@ -21,16 +21,16 @@
     "verbose": true
   },
   "dependencies": {
-    "deepmerge": "^2.1.0",
-    "inspected": "^0.3.0",
-    "json-schema-ref-parser": "^5.0.3"
+    "deepmerge": "2.1.1",
+    "inspected": "0.4.0",
+    "json-schema-ref-parser": "5.1.3"
   },
   "devDependencies": {
     "babel-cli": "6.26.0",
-    "babel-preset-env": "1.6.1",
+    "babel-preset-env": "1.7.0",
     "babel-preset-stage-0": "6.24.1",
-    "cross-env": "5.1.4",
-    "jest": "21.2.1",
+    "cross-env": "5.2.0",
+    "jest": "23.6.0",
     "standard-version": "4.2.0"
   }
 }
