--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "watch": "babel ./src -w . --out-dir . --ignore __tests__",
     "test": "jest",
     "test:watch": "jest --verbose --watchAll ",
+    "output": "babel-node run.js",
     "release": "standard-version"
   },
   "jest": {
