--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   },
   "dependencies": {
     "inspected": "0.4.0",
-    "json-schema-ref-parser": "5.1.3"
+    "json-schema-ref-parser": "5.1.3",
+    "swagger2openapi": "3.2.10"
   },
   "devDependencies": {
     "babel-cli": "6.26.0",
@@ -31,6 +32,7 @@
     "babel-preset-stage-0": "6.24.1",
     "cross-env": "5.2.0",
     "jest": "23.6.0",
+    "js-yaml": "3.12.0",
     "standard-version": "4.2.0"
   }
 }
