--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-preset-env": "1.7.0",
     "babel-preset-stage-0": "6.24.1",
     "cross-env": "5.2.0",
+    "fs-extra": "^7.0.0",
     "jest": "23.6.0",
     "js-yaml": "3.12.0",
     "standard-version": "4.2.0"
