--- a/package.json
+++ b/package.json
@@ -22,14 +22,16 @@
     "verbose": true
   },
   "dependencies": {
+    "@babel/polyfill": "^7.0.0",
     "inspected": "0.4.0",
     "json-schema-ref-parser": "5.1.3",
     "swagger2openapi": "3.2.10"
   },
   "devDependencies": {
-    "babel-cli": "6.26.0",
-    "babel-preset-env": "1.7.0",
-    "babel-preset-stage-0": "6.24.1",
+    "@babel/cli": "^7.1.2",
+    "@babel/core": "^7.1.2",
+    "@babel/node": "^7.0.0",
+    "@babel/preset-env": "^7.1.0",
     "cross-env": "5.2.0",
     "fs-extra": "^7.0.0",
     "jest": "23.6.0",
