--- a/package.json
+++ b/package.json
@@ -9,17 +9,10 @@
   "scripts": {
     "build": "babel ./src --out-dir . --ignore __tests__",
     "watch": "babel ./src -w . --out-dir . --ignore __tests__",
-    "test": "jest",
-    "test:watch": "jest --verbose --watchAll ",
+    "test": "jest --config jest.config.js --no-cache",
+    "test:watch": "jest --config jest.config.js --no-cache --watchAll",
     "output": "babel-node run.js",
     "release": "standard-version"
-  },
-  "jest": {
-    "testPathIgnorePatterns": [
-      "/node_modules/",
-      ".cache"
-    ],
-    "verbose": true
   },
   "dependencies": {
     "inspected": "0.4.0",
@@ -27,13 +20,17 @@
     "swagger2openapi": "3.2.10"
   },
   "devDependencies": {
-    "babel-cli": "6.26.0",
-    "babel-preset-env": "1.7.0",
-    "babel-preset-stage-0": "6.24.1",
+    "@babel/cli": "^7.1.2",
+    "@babel/core": "^7.1.2",
+    "@babel/node": "^7.0.0",
+    "@babel/preset-env": "^7.1.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^23.6.0",
     "cross-env": "5.2.0",
     "fs-extra": "^7.0.0",
     "jest": "23.6.0",
     "js-yaml": "3.12.0",
+    "regenerator-runtime": "^0.12.1",
     "standard-version": "4.2.0"
   }
 }
