--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,13 @@
 language: node_js
 node_js:
-  - "8"
+  - '8'
+before_install:
+  - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 1.9.4
+  - export PATH=$HOME/.yarn/bin:$PATH
 before_script: yarn run build
 deploy:
   provider: npm
-  email: "devdigital.cloud@gmail.com"
+  email: 'devdigital.cloud@gmail.com'
   api_key: $NPM_TOKEN
   skip_cleanup: true
   on:
