--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "author": "devdigital <devdigital.cloud@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "build": "babel ./src --out-dir . --ignore *.test.js",
-    "watch": "babel ./src -w . --out-dir . --ignore *.test.js",
+    "build": "babel ./src --out-dir . --ignore **/*.test.js",
+    "watch": "babel ./src -w . --out-dir . --ignore **/*.test.js",
     "test": "jest --config jest.config.js --no-cache",
     "test:watch": "jest --config jest.config.js --no-cache --watchAll",
     "output": "babel-node run.js",
