--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cross-env": "5.2.0",
     "fs-extra": "7.0.1",
     "jest": "24.7.1",
+    "jest-extended": "^0.11.1",
     "js-yaml": "3.13.1",
     "regenerator-runtime": "0.13.2",
     "standard-version": "5.0.2"
